--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,15 @@ services:
   - docker
 
 before_install:
-  # Pull docker images
-  - docker pull yshalsager/docker-pyinstaller:linux
-  - docker pull yshalsager/docker-pyinstaller:windows
+ - |
+   if ! git diff --name-only $TRAVIS_COMMIT_RANGE | grep -qvE '(.md)|^(LICENSE)'
+   then
+     echo "Not running CI since only docs were changed."
+     exit
+   fi
+ # Pull docker images
+ - docker pull yshalsager/docker-pyinstaller:linux
+ - docker pull yshalsager/docker-pyinstaller:windows
 
 script:
   - cd ${TRAVIS_BUILD_DIR}
